--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="next">下一步</string>
     <string name="no_data">暂时没有数据</string>
     <string name="more">更多</string>
+    <string name="history_data">历史数据</string>
+    <string name="filter_data">选择数据</string>
     <string name="check_photo">查看照片</string>
     <string name="take_photo">拍照</string>
     <string name="choose_photo">选择照片</string>
