--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="more">更多</string>
     <string name="history_data">历史数据</string>
     <string name="filter_data">选择数据</string>
+    <string name="menu_finish">完成</string>
     <string name="check_photo">查看照片</string>
     <string name="take_photo">拍照</string>
     <string name="choose_photo">选择照片</string>
@@ -24,4 +25,7 @@
     <string name="list_1">无明显特征</string>
     <string name="list_2">无明显特征</string>
     <string name="list_3">无明显特征</string>
+
+    <string name="history_tabs_name">数据</string>
+    <string name="chart_tabs_name">曲线</string>
 </resources>
